remove all the iifes, create a bundle

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {},
   "scripts": {
     "test": "eslint js/",
-    "build.dev": "webpack --mode development",
-    "build.prod": "webpack --mode production"
+    "build": "webpack --mode production"
   },
   "engines": {
     "node": "8.11"
